--- a/src/components/FooterStats.css
+++ b/src/components/FooterStats.css
@@ -1,9 +1,10 @@
 .footer-stats {
     display: flex;
     flex-direction: column;
-    gap: 1rem;
-    padding-top: 1rem;
+    gap: 0;
+    padding-top: 0;
     position: relative;
+    margin-top: 0;
 }
 
 .donuts-row {
@@ -80,7 +81,8 @@
 .footer-bottom {
     display: flex;
     justify-content: flex-end;
-    padding: 1rem 0;
+    padding: 0;
+    margin-top: 0.5rem;
 }
 
 .social-icons {
