--- a/src/components/SummaryStats.css
+++ b/src/components/SummaryStats.css
@@ -8,6 +8,7 @@
     height: 200px;
     align-items: center;
     box-sizing: border-box;
+    margin-bottom: 1.5rem;
 }
 
 .stats-left {
@@ -20,6 +21,18 @@
     height: 100%;
     padding: 0;
     margin: 0;
+}
+
+.month-title {
+    grid-column: 1 / -1;
+    font-family: 'Maharlika', 'Playfair Display', serif;
+    font-size: 2.5rem;
+    font-weight: 400;
+    margin-bottom: 0.5rem;
+    line-height: 1;
+    color: var(--text-primary);
+    text-transform: uppercase;
+    letter-spacing: 2px;
 }
 
 .stat-row {
